@@ -83,6 +83,8 @@
  [arrow-space (parameter/c natural-number/c)]
  [label-space (parameter/c natural-number/c)]
  [metafunction-cases (parameter/c (or/c #f (and/c pair? (listof (and/c integer? (or/c zero? positive?))))))]
+ [judgment-form-cases (parameter/c (or/c #f (and/c (listof (or/c exact-nonnegative-integer? string?))
+                                                   pair?)))]
  [metafunction-pict-style 
   (parameter/c (symbols 'left-right
                         'left-right/vertical-side-conditions
